Make sure .top_notice (PM message) doesn't get hidden by navbar.

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -387,7 +387,7 @@ td.minimal, th.minimal {
 }
 div.top_notice {
 	text-align: center;
-	margin: 5px auto;
+	margin: 48px auto 1em;
 }
 span.public_ban {
 	display: block;
